fixed an overflow issue for input boxes

--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,6 @@
 
 .TodoForm .text input {
   padding: 1rem;
-  width: 100%;
   margin-bottom: 0.5rem;
   border: none;
   font-size: 1.2rem;
